styles/base.css
*{
    box-sizing: border-box ;
    margin: 0;
    padding: 0;
}   

body{
    font-family:"roboto",sans-serif;
    background-color: #f4f4f4;
    color: #222;
    line-height: 1.6;
}

header{
    background-color: #1f3a5f;
    color: white;
    text-align: center;
}

#course-title{
    display: block;
    font-family: "Playfair Display", serif ;
    font-size: 1.8 rem;
    font-weight: 700;
    padding: 1.5rem;
}

nav{
    display: flex;
    justify-content: center;
    background-color: #111827;
}

nav a{
    color: white;
    text-decoration: none;
    padding: 1rem 2rem;
    font-weight: 700;
    transition: background-color 0.3s ease, color 0.3s ease;
}

nav a:hover{
    background-color: #facc15;
    color: #111827;
}

main{
    max-width: 1000px;
    margin: 2rem auto;
    padding: 1rem;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 1.5rem;
}

h1{
    grid-column: 1 / 3;
    text-align: center;
    font-family: "Playfair Display", serif ;
    color: #1f3a5f;
    margin-bottom: 1rem;
}

.card{
    background-color: white;
    border: 1px solid #ccc;
    border-radius: 10px;
    overflow: hidden;
    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
}

.card h2{
    background-color: #1f3a5f;
    color: white;
    text-align: center;
    padding: 0.8rem;
    font-family: "Playfair Display", serif ;
}

.content{
    padding: 1rem;
}

.content img{
    width: 180px;
    height: auto;
    display: block;
    margin: 0 auto 1rem auto;
    border-radius: 8px;
}

.content p{
    text-align: center;
}

footer{
    background-color: #1f3a5f;
    color: white;
    text-align: center;
    padding: 1rem;
    margin-top: 2rem;
}

footer p{
    margin: 0.3rem;
}

#last-modified{
    font-size: 0.9rem;
    color: #facc15;
}

@media screen and (max-width: 700px) {
    nav{
        flex-direction: column;
    }

    main{
        grid-template-columns: 1fr;
    }

    h1{
        grid-column: 1;
    }

    nav a{
        padding: 0.8rem;
    }
    
}

